Version 2.0-0 (2013-04-08)
o New major version, now reflecting the 2012 Lahman database.  Some deprecated or defunct
  tables were dropped.

Version 1.0-10 (2012-10-04)
o Fixed deprecated warnings stemming from changes in ggplot2

Version 1.0-8 (2011-10-02)
o Added examples in HallOfFame.Rd
o Fixed definitions of BABIP and OBP in battingStats()
o Added examples in Manager.Rd

Version 1.0-7 (2011-09-27)
o Extended examples in Batting.Rd
o Initial release to CRAN

Version 1.0-6 (2011-09-26)
o Added battingStats() function to calculate BA and friends

Version 1.0-5 (2011-09-25)
o Added Authors@R in DESCRIPTION for R 2.14.x
o Fixed Appearances table
o Added demo/batting-summstats.R
o Added a few examples to various files
o Initial export to R-Forge


