@@ -1,6 +1,7 @@
 Version 2.0-0 (2013-04-08)
 o New major version, now reflecting the 2012 Lahman database.  Some deprecated or defunct
   tables were dropped.
+o readLahman.R added to inst/scripts for documentation of how the data files were created
 
 Version 1.0-10 (2012-10-04)
 o Fixed deprecated warnings stemming from changes in ggplot2
